public/styles/tweet.css
#tweets-container {
  width: inherit;
  display: flex;
  flex-direction: column;
  align-items: inherit;
  width: 100%;
}


.tweet {
  width: 98%;
  border: solid rgb(0, 0, 0);
  margin-top: 5%;
  padding: 1em;
}

#handle {
  visibility: hidden;
}

.tweet:hover {
  box-shadow: 10px 10px;
  text-shadow: 0.3px 0.3px;
} 

.tweet:hover #handle {
  visibility: visible;
  opacity: 50%;
}

.tweet header {
  font-size: 90%;
  height: 20px;
  background-color: inherit;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1em;

}

.tweet header img {
  width: 20px;
  margin-right: 0.5em;
}

.tweet div {
  margin-left: 1%;
}

.tweet footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  border-top: solid black;
  padding: 1%;
}

.tweet footer span {
  margin-left: 1em;
  margin-right: 1em;
}

